# he-poly-core

./: CHANGELOG.md  CMakeLists.txt  COMMIT_MSG.txt  PR_DESCRIPTION.md  README.md  README_NTT.md  bench_compare_avx  bench_compare_avx_full  bench_compare_native  build_test_runner  build_test_runner_mont  compile_err.txt  compile_err_avx.txt
.github/workflows/: ci.yml
bench/: bench_compare.cpp  bench_gbench.cpp  bench_ntt.cpp
docs/: CodeOfConduct.md  Contributing.md  Design-Overview.md  Modular-Arithmetic.md  Montgomery-Lazy.md  NTT-Explained.md  Performance-Tuning.md  README_about.txt
include/: cpu_features.h  montgomery.h  ntt.h  ntt_simd.h  poly.h
src/: mod_arith.cpp  montgomery.cpp  ntt.cpp  ntt_simd.cpp  poly.cpp
tests/: test_ntt.cpp  test_runner.cpp
